[gd_scene load_steps=8 format=2]

[ext_resource path="res://screens/PlayingScreen.gd" type="Script" id=1]
[ext_resource path="res://levels/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/StarField.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/PlayerShip.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/RandomLevelGenerator.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/PauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/BossMenu.tscn" type="PackedScene" id=7]

[node name="PlayingScreen" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="HUD" parent="." index="0" instance=ExtResource( 2 )]

[node name="StarField" parent="." index="1" instance=ExtResource( 3 )]

[node name="PlayerShip" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 87.8246, 354.615 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="RandomLevelGenerator" parent="." index="3" instance=ExtResource( 5 )]

[node name="PlayerDiedTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 3.5
one_shot = true
autostart = false

[node name="PauseMenu" parent="." index="5" instance=ExtResource( 6 )]

visible = false
margin_right = 1206.0
margin_bottom = 656.0
popup_exclusive = true
_sections_unfolded = [ "Material", "Pause", "Popup", "Rect", "Visibility" ]

[node name="BossMenu" parent="." index="6" instance=ExtResource( 7 )]

visible = false

[connection signal="died" from="PlayerShip" to="." method="_onPlayerDied"]

[connection signal="bossBecameActive" from="RandomLevelGenerator" to="." method="_onBossBecameActive"]

[connection signal="bossDied" from="RandomLevelGenerator" to="." method="_onBossDied"]

[connection signal="timeout" from="PlayerDiedTimer" to="." method="_onPlayerDiedTimerTimeout"]


